cache entry multimap